recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:7: error: not found: value lenghth
		avance(lenghth)
                       ^