recursion.lessons.recursion.koch.HexaKoch.scala.code
def drawCurve(levels:Int, length:Double) {
    hexaKoch(levels, length);
}
def hexaKoch(levels:Int, length:Double) {
	if(levels == 0 ) {
		avance(lenghth)
	}
	else {
		hexaKoch(levels-1, length*0.14)
		gauche(60)
	}
}
